world-gen + item fix