@@ -8,6 +8,7 @@ import daniking.vinery.block.VariantLeavesBlock;
 import daniking.vinery.registry.ObjectRegistry;
 import daniking.vinery.world.feature.VineryVinesFeature;
 import net.minecraft.core.Holder;
+import net.minecraft.core.Registry;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.data.worldgen.placement.VegetationPlacements;
@@ -31,31 +32,41 @@ import net.minecraft.world.level.levelgen.placement.BiomeFilter;
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
 import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import net.minecraft.world.level.levelgen.placement.RarityFilter;
+import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.registries.DeferredRegister;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.List;
+import java.util.function.Supplier;
 
 public class VineryConfiguredFeatures {
 
     public static final DeferredRegister<Feature<?>> FEATURES = DeferredRegister.create(ForgeRegistries.FEATURES, Vinery.MODID);
+    public static final DeferredRegister<ConfiguredFeature<?, ?>> CONFIGURED_FEATURES = DeferredRegister.create(Registry.CONFIGURED_FEATURE_REGISTRY, Vinery.MODID);
+
+    public static final DeferredRegister<PlacedFeature> PLACED_FEATURES = DeferredRegister.create(Registry.PLACED_FEATURE_REGISTRY, Vinery.MODID);
 
     public static final RegistryObject<Feature<SimpleBlockConfiguration>> VINES_FEATURE = FEATURES.register("vines_feature", () -> new VineryVinesFeature(SimpleBlockConfiguration.CODEC));
 
-    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> RED_GRAPE_BUSH_PATCH = FeatureUtils.register(VineryIdentifier.asString("red_grape_bush"), Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(ObjectRegistry.RED_GRAPE_BUSH.get().defaultBlockState().setValue(GrapeBush.AGE, 3))), List.of(Blocks.GRASS_BLOCK), 36));
-    public static final Holder<PlacedFeature> RED_GRAPE_PATCH_CHANCE = PlacementUtils.register(VineryIdentifier.asString("red_grape_bush_chance"), RED_GRAPE_BUSH_PATCH, RarityFilter.onAverageOnceEvery(92), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome());
-    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> WHITE_GRAPE_BUSH_PATCH = FeatureUtils.register(VineryIdentifier.asString("white_grape_bush"), Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(ObjectRegistry.WHITE_GRAPE_BUSH.get().defaultBlockState().setValue(GrapeBush.AGE, 3))), List.of(Blocks.GRASS_BLOCK), 36));
-    public static final Holder<PlacedFeature> WHITE_GRAPE_PATCH_CHANCE = PlacementUtils.register(VineryIdentifier.asString("white_grape_bush_chance"), WHITE_GRAPE_BUSH_PATCH, RarityFilter.onAverageOnceEvery(92), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> CHERRY = FeatureUtils.register(VineryIdentifier.asString("cherry"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.CHERRY_LOG.get()), new StraightTrunkPlacer(5, 2, 0), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> CHERRY_VARIANT = FeatureUtils.register(VineryIdentifier.asString("cherry_variant"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.CHERRY_LOG.get()), new StraightTrunkPlacer(5, 2, 0), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY = FeatureUtils.register(VineryIdentifier.asString("old_cherry"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of()).forceDirt().build());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_BEE = FeatureUtils.register(VineryIdentifier.asString("old_cherry_bee"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of(new BeehiveDecorator(0.5f))).forceDirt().build());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_VARIANT = FeatureUtils.register(VineryIdentifier.asString("old_cherry_variant"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of()).forceDirt().build());
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_VARIANT_WITH_BEE = FeatureUtils.register(VineryIdentifier.asString("old_cherry_variant_with_bee"), Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of(new BeehiveDecorator(0.5f))).forceDirt().build());
-    
-    public static final Holder<PlacedFeature> TREE_CHERRY = PlacementUtils.register("tree_cherry", CHERRY, VegetationPlacements.treePlacement(PlacementUtils.countExtra(0, 0.01f, 1), ObjectRegistry.CHERRY_SAPLING.get()));
-    public static final Holder<PlacedFeature> TREE_CHERRY_OLD = PlacementUtils.register("tree_cherry_old", OLD_CHERRY, VegetationPlacements.treePlacement(PlacementUtils.countExtra(0, 0.01f, 1), ObjectRegistry.OLD_CHERRY_SAPLING.get()));
+
+    public static final RegistryObject<ConfiguredFeature<?, ?>> RED_GRAPE_BUSH_PATCH = registerConfiguredFeature("red_grape_bush", () -> new ConfiguredFeature<>(Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(ObjectRegistry.RED_GRAPE_BUSH.get().defaultBlockState().setValue(GrapeBush.AGE, 3))), List.of(Blocks.GRASS_BLOCK), 36)));
+    public static final RegistryObject<ConfiguredFeature<?, ?>> WHITE_GRAPE_BUSH_PATCH = registerConfiguredFeature("white_grape_bush", () -> new ConfiguredFeature<>(Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(ObjectRegistry.WHITE_GRAPE_BUSH.get().defaultBlockState().setValue(GrapeBush.AGE, 3))), List.of(Blocks.GRASS_BLOCK), 36)));
+    public static final RegistryObject<ConfiguredFeature<?, ?>> CHERRY = registerConfiguredFeature("cherry", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.CHERRY_LOG.get()), new StraightTrunkPlacer(5, 2, 0), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build()));
+    public static final RegistryObject<ConfiguredFeature<TreeConfiguration, ?>> CHERRY_VARIANT = registerConfiguredFeature("cherry_variant", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.CHERRY_LOG.get()), new StraightTrunkPlacer(5, 2, 0), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build()));
+    public static final RegistryObject<ConfiguredFeature<?, ?>> OLD_CHERRY = registerConfiguredFeature("old_cherry", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of()).forceDirt().build()));
+    public static final RegistryObject<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_BEE = registerConfiguredFeature("old_cherry_bee", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState()), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of(new BeehiveDecorator(0.5f))).forceDirt().build()));
+    public static final RegistryObject<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_VARIANT = registerConfiguredFeature("old_cherry_variant", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of()).forceDirt().build()));
+    public static final RegistryObject<ConfiguredFeature<TreeConfiguration, ?>> OLD_CHERRY_VARIANT_WITH_BEE = registerConfiguredFeature("old_cherry_variant_with_bee", () -> new ConfiguredFeature<>(Feature.TREE, new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ObjectRegistry.OLD_CHERRY_LOG.get()), new FancyTrunkPlacer(4, 14, 2), SimpleStateProvider.simple(ObjectRegistry.CHERRY_LEAVES.get().defaultBlockState().setValue(VariantLeavesBlock.VARIANT, 1)), new RandomSpreadFoliagePlacer(ConstantInt.of(3), ConstantInt.of(0), ConstantInt.of(2), 50), new TwoLayersFeatureSize(1, 1, 2)).decorators(ImmutableList.of(new BeehiveDecorator(0.5f))).forceDirt().build()));
+
+
+
+    public static final RegistryObject<PlacedFeature> RED_GRAPE_PATCH_CHANCE = registerPlacedFeature("red_grape_bush_chance", () -> new PlacedFeature(RED_GRAPE_BUSH_PATCH.getHolder().get(), List.of(RarityFilter.onAverageOnceEvery(92), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+    public static final RegistryObject<PlacedFeature> WHITE_GRAPE_PATCH_CHANCE = registerPlacedFeature("white_grape_bush_chance", () -> new PlacedFeature(WHITE_GRAPE_BUSH_PATCH.getHolder().get(), List.of(RarityFilter.onAverageOnceEvery(92), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+
+
+    public static final RegistryObject<PlacedFeature> TREE_CHERRY = registerPlacedFeature("tree_cherry", () -> new PlacedFeature(CHERRY.getHolder().get(), VegetationPlacements.treePlacement(PlacementUtils.countExtra(0, 0.01f, 1), ObjectRegistry.CHERRY_SAPLING.get())));
+    public static final RegistryObject<PlacedFeature> TREE_CHERRY_OLD = registerPlacedFeature("tree_cherry_old", () -> new PlacedFeature(OLD_CHERRY.getHolder().get(), VegetationPlacements.treePlacement(PlacementUtils.countExtra(0, 0.01f, 1), ObjectRegistry.OLD_CHERRY_SAPLING.get())));
 
     /*
     private static RandomPatchConfiguration getFlowerGrassConfig(Block flowerGrass) {
@@ -64,18 +75,18 @@ public class VineryConfiguredFeatures {
 
      */
     
-    public static void init() {
-        /*
-        BiomeModification world = BiomeModifications.create(new VineryIdentifier("world_features"));
-        Predicate<BiomeSelectionContext> bushBiomes = BiomeSelectors.includeByKey(Biomes.FOREST, Biomes.PLAINS, Biomes.TAIGA, Biomes.RIVER, Biomes.SWAMP, Biomes.JUNGLE);
-        Predicate<BiomeSelectionContext> grassFlowerBiomes = BiomeSelectors.includeByKey(Biomes.PLAINS, Biomes.TAIGA, Biomes.RIVER, Biomes.SWAMP);
-        world.add(ModificationPhase.ADDITIONS, bushBiomes, ctx -> ctx.getGenerationSettings().addBuiltInFeature(GenerationStep.Decoration.VEGETAL_DECORATION, RED_GRAPE_PATCH_CHANCE.value()));
-        world.add(ModificationPhase.ADDITIONS, bushBiomes, ctx -> ctx.getGenerationSettings().addBuiltInFeature(GenerationStep.Decoration.VEGETAL_DECORATION, WHITE_GRAPE_PATCH_CHANCE.value()));
+    public static void register(IEventBus eventBus) {
+        FEATURES.register(eventBus);
+        CONFIGURED_FEATURES.register(eventBus);
+        PLACED_FEATURES.register(eventBus);
+    }
 
-        world.add(ModificationPhase.ADDITIONS, getTreesSelector(), ctx -> ctx.getGenerationSettings().addBuiltInFeature(GenerationStep.Decoration.VEGETAL_DECORATION, TREE_CHERRY.value()));
-        world.add(ModificationPhase.ADDITIONS, getTreesSelector(), ctx -> ctx.getGenerationSettings().addBuiltInFeature(GenerationStep.Decoration.VEGETAL_DECORATION, TREE_CHERRY_OLD.value()));
+    private static <T extends ConfiguredFeature<?, ?>> RegistryObject<T> registerConfiguredFeature(String path, Supplier<T> supplier){
+        return CONFIGURED_FEATURES.register(path, supplier);
+    }
 
-         */
+    private static <T extends PlacedFeature> RegistryObject<T> registerPlacedFeature(String path, Supplier<T> supplier){
+        return PLACED_FEATURES.register(path, supplier);
     }
  /*
 	private static Predicate<BiomeSelectionContext> getTreesSelector() {
